# pdf-summarizer

./: .gitignore  BACKEND_OPTIMIZATIONS.md  CLAUDE.md  DATABASE.md  LIBRARY_FEATURE.md  PROGRESS.md  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  setup-ollama.sh
apps/backend/: .env.example  README.md  project.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_performance_indexes.py  003_add_tsvector_columns.py  004_search_optimization_indexes.py  006_add_trigram_support.py  0d9eaccc327a_add_status_to_documents.py  2ce8ee5c628c_add_processed_at_to_documents_table.py  499ee5d80a69_add_extracted_text_and_word_count_to_.py  README.md  a9132ced46c7_add_updated_at_to_documents_table.py  consolidated_initial_schema.py  f44d9c81df20_add_error_message_to_documents_table.py  fix_cascade_deletes.py  rename_deleted_at_to_archived_at.py
apps/backend/alembic/versions_backup/: 0144fc779998_remove_is_smart_column_from_folders.py  0bc65add84d6_add_vector_index_for_similarity_search.py  23804b4f39d0_add_tags_table_and_document_tags_.py  2e8cdb075967_make_embedding_dimension_flexible.py  375b75e28a08_add_smart_folders_with_tag_associations.py  3f9f7f62f929_add_performance_indexes_comprehensive.py  5489305cfca5_recreate_missing_folder_tags_table.py  648d2c7e14b6_initial_migration_with_users_documents_.py  72c667decb3e_add_embedding_column_to_tags_table.py  7c3698d02762_replace_document_folders_many_to_many_.py  84c678a2ecc2_add_performance_indexes.py  90afbc27e166_add_folders_table_and_document_folders_.py  a6affcf4a903_add_soft_delete_fields_for_trash_.py  c142041b5ea0_make_storage_path_nullable_for_text_.py  c3988533a3ff_add_pgvector_hnsw_indexes.py  consolidated_initial_migration.py  d8414762858c_add_cascade_delete_to_folder_children_.py
apps/backend/docs/: DOCUMENT_DETAIL_PAGE_PLAN.md
apps/backend/scripts/: check_document_tags.py  check_summary_content.py  cleanup_invalid_tags.py  cleanup_orphaned_tags.py  consolidate_migrations.py  debug_tags.py  debug_tags_after_delete.py  modernize_types.py  s3_cors.json  setup_db.py  setup_s3_cors.py  test_pdf_upload.py  test_tag_cascade.py  test_tag_generation.py
apps/backend/src/: config.py  main.py
apps/backend/src/archive/: dependencies.py  router.py  service.py
apps/backend/src/auth/: cached_user_service.py  dependencies.py  jwt.py  jwt_service.py  oauth.py  oauth_service.py  router.py  schemas.py  user_service.py  users.py  users_db.py  utils.py
apps/backend/src/chat/: async_router.py  async_service.py  chat_service.py  dependencies.py  router.py  schemas.py  service.py
apps/backend/src/common/: cache_dependencies.py  cache_service.py  dependencies.py  embeddings_service.py  error_handlers.py  exceptions.py  health_service.py  llm_factory.py  logging.py  monitoring.py  progress_tracker.py  retry.py  schemas.py
apps/backend/src/database/: __init__.py  models.py  session.py
apps/backend/src/document/: __init__.py  dependencies.py  document_service.py  export_service.py  organize_service.py  pdf_utils.py  router.py  schemas.py  service.py
apps/backend/src/embeddings/: __init__.py  dependencies.py  embeddings_service.py  service.py
apps/backend/src/export/: __init__.py  dependencies.py  router.py  schemas.py
apps/backend/src/flashcard/: __init__.py  async_router.py  async_service.py  dependencies.py  llm_schemas.py  router.py  schemas.py  service.py
apps/backend/src/folder/: __init__.py  dependencies.py  router.py  schemas.py  service.py
apps/backend/src/health/: router.py
apps/backend/src/monitoring/: __init__.py  progress_tracker.py  router.py
apps/backend/src/pdf/: dependencies.py  export.py  router.py  schemas.py  service.py  storage.py
apps/backend/src/processing/: __init__.py  dependencies.py  orchestrator.py  router.py  schemas.py  service.py
apps/backend/src/quiz/: __init__.py  async_router.py  async_service.py  dependencies.py  llm_schemas.py  router.py  schemas.py  service.py
apps/backend/src/search/: __init__.py  dependencies.py  reranker.py  router.py  schemas.py  search_engine.py  service.py
apps/backend/src/storage/: __init__.py  dependencies.py  router.py  service.py
apps/backend/src/summarization/: async_router.py  async_service.py  dependencies.py  domain.py  orchestrator.py  router.py  schemas.py  service.py
apps/backend/src/tag/: __init__.py  cached_service.py  dependencies.py  router.py  schemas.py  (+1 more)
apps/worker/: .env.example  Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  README.md  project.json  pyproject.toml
apps/worker/scripts/: retry_failed_jobs.py
apps/worker/src/: __init__.py  worker_settings.py
apps/worker/tests/: test_hello.py
apps/worker/worker/: hello.py
(+152 files in other folders)
