[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/backend/html'
 --cov-report xml:'../../coverage/apps/backend/coverage.xml'
 --html='../../reports/apps/backend/unittests/html/index.html'
 --junitxml='../../reports/apps/backend/unittests/junit.xml'
"""

[project]
name = "doculearn-backend"
version = "1.0.0"
description = "DocuLearn - Transform Documents into Knowledge"
requires-python = ">=3.11,<4"
dependencies = [
  # Shared library
  "shared @ {root:uri}/../../libs/shared",
  
  # Web framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  
  # Data validation and settings
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pydantic[email]",
  
  # Database
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pgvector>=0.3.0",
  "greenlet>=3.0.0",
  
  # Authentication
  "authlib>=1.3.0",
  "python-jose[cryptography]>=3.3.0",
  "itsdangerous>=2.2.0",
  
  # HTTP client
  "httpx>=0.27.0",
  
  # Storage
  "boto3>=1.34.0",
  "aioboto3>=13.0.0",
  
  # Document generation/export
  "reportlab>=4.4.1",
  "markdown2>=2.5.3",
  
  
  # Utils
  "python-dotenv>=1.0.0",
  "aiofiles>=24.1.0",
  
  # Redis for caching and job queue
  "redis[hiredis]>=5.0.0,<6.0.0",
  
  # arq for job enqueueing
  "arq>=0.25.0",
  
  # Retry logic for external services
  "tenacity>=9.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = [
  # Allow use of Depends in function defaults (FastAPI pattern)
  "B008",
  # Allow raising exceptions without from clause
  "B904",
  # Allow lines slightly longer than 100 chars (some are hard to break)
  "E501",
]

fixable = ["ALL"]
unfixable = []
