[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/worker/html'
 --cov-report xml:'../../coverage/apps/worker/coverage.xml'
 --html='../../reports/apps/worker/unittests/html/index.html'
 --junitxml='../../reports/apps/worker/unittests/junit.xml'
"""

[project]
name = "worker"
version = "1.0.0"
description = "Background worker for DocuLearn using arq"
requires-python = ">=3.13,<4"
readme = 'README.md'
dependencies = [
    # Shared library
    "shared @ {root:uri}/../../libs/shared",
    
    # Core dependencies
    "arq>=0.25.0",
    "redis[hiredis]>=5.0.0,<6.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Document processing
    "pypdf2>=3.0.0",
    
    # LLM and embeddings
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.2",
    "langchain-ollama>=0.3.0",
    "pgvector>=0.2.4",
    
    # Utils
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "numpy>=1.26.0",  # For embeddings processing
    "aiofiles>=24.1.0",  # For async file operations
    "msgpack>=1.0.0",  # For arq job serialization
    "aioboto3>=13.0.0",  # For S3 operations
    "psutil>=5.9.0",  # For CPU monitoring
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
